--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <p class="p1">&lt;html lang="en"&gt;</p>
 <p class="p1">&lt;head&gt;</p>
 <p class="p1"><span class="Apple-converted-space">  </span>&lt;meta charset="UTF-8"&gt;</p>
-<p class="p1"><span class="Apple-converted-space">  </span>&lt;title&gt;Happy Birthday Blog <span class="s1">🎉</span>&lt;/title&gt;</p>
+<p class="p1"><span class="Apple-converted-space">  </span>&lt;title&gt;Happy Birthday Siphiwe <span class="s1">🎉</span>&lt;/title&gt;</p>
 <p class="p1"><span class="Apple-converted-space">  </span>&lt;style&gt;</p>
 <p class="p1"><span class="Apple-converted-space">    </span>body {</p>
 <p class="p1"><span class="Apple-converted-space">      </span>font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;</p>
@@ -73,13 +73,13 @@
 <p class="p1"><span class="Apple-converted-space">      </span>&lt;p&gt;I hope your day is filled with laughter, cake, surprises, and all the love you give to others. You deserve the best, today and always. <span class="s1">💕</span>&lt;/p&gt;</p>
 <p class="p1"><span class="Apple-converted-space">      </span>&lt;p&gt;I love you endlessly! <span class="s1">🥰</span>&lt;/p&gt;</p>
 <p class="p1"><span class="Apple-converted-space">      </span>&lt;p&gt;Forever yours,&lt;/p&gt;</p>
-<p class="p1"><span class="Apple-converted-space">      </span>&lt;p&gt;&lt;strong&gt;Your Name&lt;/strong&gt;&lt;/p&gt;</p>
+<p class="p1"><span class="Apple-converted-space">      </span>&lt;p&gt;&lt;strong&gt;JEFF&lt;/strong&gt;&lt;/p&gt;</p>
 <p class="p1"><span class="Apple-converted-space">    </span>&lt;/div&gt;</p>
 <p class="p1"><span class="Apple-converted-space">    </span>&lt;p style="font-size: 0.9em; color: #888;"&gt;(You can click and edit this message!)&lt;/p&gt;</p>
 <p class="p1"><span class="Apple-converted-space">  </span>&lt;/div&gt;</p>
 <p class="p2"><br></p>
 <p class="p1"><span class="Apple-converted-space">  </span>&lt;footer&gt;</p>
-<p class="p1"><span class="Apple-converted-space">    </span>© 2025 | Made with <span class="s1">❤️</span> by a very lucky computer science student</p>
+<p class="p1"><span class="Apple-converted-space">    </span>© 2025 | Made with <span class="s1">❤️</span> by a very lucky computer guy</p>
 <p class="p1"><span class="Apple-converted-space">  </span>&lt;/footer&gt;</p>
 <p class="p2"><br></p>
 <p class="p1">&lt;/body&gt;</p>
