--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   </div>
 
   <footer>
-    © 2025 | Made with ❤️ by your computer science boyfriend
+    © 2025 | Made with ❤️ by your computer science boyfriend Jeff
   </footer>
 
 </body>
