Fix HTML so it renders as a webpage

--- a/index.html
+++ b/index.html
@@ -1,71 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Happy Birthday Darling 🎂</title>
+  <meta charset="UTF-8" />
+  <title>Happy Birthday Darling 🎉</title>
   <style>
     body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: #fff0f6;
-      color: #333;
+      font-family: Arial, sans-serif;
+      background-color: #ffe6f0;
       margin: 0;
-      padding: 2rem;
-    }
-
-    header {
+      padding: 0;
       text-align: center;
-      padding: 1rem;
     }
-
+    .container {
+      padding: 2rem;
+      max-width: 800px;
+      margin: auto;
+    }
+    .card {
+      background: white;
+      padding: 2rem;
+      border-radius: 15px;
+      box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+    }
     h1 {
-      color: #d6336c;
+      color: #e91e63;
     }
-
-    .blog-post {
-      background: #fff;
-      border-radius: 10px;
-      padding: 2rem;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-      margin: 2rem auto;
-      max-width: 700px;
-    }
-
     .editable {
-      border: 2px dashed #d6336c;
+      border: 2px dashed #e91e63;
       padding: 1rem;
-      border-radius: 8px;
-      min-height: 100px;
-    }
-
-    footer {
-      text-align: center;
-      margin-top: 3rem;
-      color: #777;
+      border-radius: 10px;
+      margin-top: 1rem;
     }
   </style>
 </head>
 <body>
-
-  <header>
-    <h1>💖 Happy Birthday, My Love! 💖</h1>
-    <p>A little blog post just for you 💌</p>
-  </header>
-
-  <div class="blog-post">
-    <div class="editable" contenteditable="true">
-      <p>Hey sweetheart,</p>
-      <p>Happy Birthday! 🎂 I just want to take a moment to tell you how much you mean to me. You're my sunshine, my best friend, and the most beautiful soul I’ve ever known.</p>
-      <p>I hope your day is filled with laughter, cake, surprises, and all the love you give to others. You deserve the best, today and always. 💕</p>
-      <p>I love you endlessly! 🥰</p>
-      <p>Forever yours,</p>
-      <p><strong>Your Name</strong></p>
+  <div class="container">
+    <div class="card">
+      <h1>🎂 Happy Birthday, Darling! 💖</h1>
+      <p>This message is editable — click and make it yours!</p>
+      <div class="editable" contenteditable="true">
+        <p>My love,</p>
+        <p>Happy Birthday! You mean the world to me and more. I hope this day brings you as much joy as you bring into my life every day.</p>
+        <p>With all my heart,</p>
+        <p><strong>Your Name</strong></p>
+      </div>
     </div>
-    <p style="font-size: 0.9em; color: #888;">(You can click and edit this message!)</p>
   </div>
-
-  <footer>
-    © 2025 | Made with ❤️ by your computer science boyfriend
-  </footer>
-
+</body>
+</html><!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>Happy Birthday Darling 🎉</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #ffe6f0;
+      margin: 0;
+      padding: 0;
+      text-align: center;
+    }
+    .container {
+      padding: 2rem;
+      max-width: 800px;
+      margin: auto;
+    }
+    .card {
+      background: white;
+      padding: 2rem;
+      border-radius: 15px;
+      box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+    }
+    h1 {
+      color: #e91e63;
+    }
+    .editable {
+      border: 2px dashed #e91e63;
+      padding: 1rem;
+      border-radius: 10px;
+      margin-top: 1rem;
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <div class="card">
+      <h1>🎂 Happy Birthday, Darling! 💖</h1>
+      <p>This message is editable — click and make it yours!</p>
+      <div class="editable" contenteditable="true">
+        <p>My love,</p>
+        <p>Happy Birthday! You mean the world to me and more. I hope this day brings you as much joy as you bring into my life every day.</p>
+        <p>With all my heart,</p>
+        <p><strong>Your Name</strong></p>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
