Fix HTML so it renders as a webpage

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Happy Birthday Darling 🎉</title>
+  <title>Happy Birthday Siphiwe 🎉</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -36,13 +36,13 @@
 <body>
   <div class="container">
     <div class="card">
-      <h1>🎂 Happy Birthday, Darling! 💖</h1>
+      <h1>🎂 Happy Birthday, Siphiwe! 💖</h1>
       <p>This message is editable — click and make it yours!</p>
       <div class="editable" contenteditable="true">
         <p>My love,</p>
         <p>Happy Birthday! You mean the world to me and more. I hope this day brings you as much joy as you bring into my life every day.</p>
         <p>With all my heart,</p>
-        <p><strong>Your Name</strong></p>
+        <p><strong>Jeffrey</strong></p>
       </div>
     </div>
   </div>
