Fix HTML so it renders as a webpage

--- a/index.html
+++ b/index.html
@@ -88,10 +88,15 @@
       <h1>🎂 Happy Birthday, Darling! 💖</h1>
       <p>This message is editable — click and make it yours!</p>
       <div class="editable" contenteditable="true">
-        <p>My love,</p>
-        <p>Happy Birthday! You mean the world to me and more. I hope this day brings you as much joy as you bring into my life every day.</p>
-        <p>With all my heart,</p>
-        <p><strong>Your Name</strong></p>
+  <p>Dear Siphiwe,</p>
+  <p>Happy Birthday, my love! 🎉</p>
+  <p>On this special day, I just want to say how much you mean to me. Your smile lights up my world, and your presence fills my life with joy, love, and purpose. 💖</p>
+  <p>Thank you for being so amazing — beautiful, strong, kind, and truly one of a kind. I hope today brings you as much happiness as you bring into my life every single day.</p>
+  <p>I love you more than words can ever express.</p>
+  <p>With all my heart,</p>
+  <p><strong>Jeffrey</strong></p>
+</div>
+
       </div>
     </div>
   </div>
