--- a/index.html
+++ b/index.html
@@ -2,55 +2,6 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Happy Birthday Siphiwe 🎉</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #ffe6f0;
-      margin: 0;
-      padding: 0;
-      text-align: center;
-    }
-    .container {
-      padding: 2rem;
-      max-width: 800px;
-      margin: auto;
-    }
-    .card {
-      background: white;
-      padding: 2rem;
-      border-radius: 15px;
-      box-shadow: 0 5px 15px rgba(0,0,0,0.1);
-    }
-    h1 {
-      color: #e91e63;
-    }
-    .editable {
-      border: 2px dashed #e91e63;
-      padding: 1rem;
-      border-radius: 10px;
-      margin-top: 1rem;
-    }
-  </style>
-</head>
-<body>
-  <div class="container">
-    <div class="card">
-      <h1>🎂 Happy Birthday, Siphiwe! 💖</h1>
-      <p>This message is editable — click and make it yours!</p>
-      <div class="editable" contenteditable="true">
-        <p>My love,</p>
-        <p>Happy Birthday! You mean the world to me and more. I hope this day brings you as much joy as you bring into my life every day.</p>
-        <p>With all my heart,</p>
-        <p><strong>Jeffrey</strong></p>
-      </div>
-    </div>
-  </div>
-</body>
-</html><!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
   <title>Happy Birthday Darling 🎉</title>
   <style>
     body {
@@ -79,6 +30,15 @@
       padding: 1rem;
       border-radius: 10px;
       margin-top: 1rem;
+      min-height: 150px;
+      text-align: left;
+      cursor: text;
+    }
+    img {
+      max-width: 250px;
+      border-radius: 50%;
+      margin-bottom: 1rem;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.2);
     }
   </style>
 </head>
@@ -87,16 +47,18 @@
     <div class="card">
       <h1>🎂 Happy Birthday, Darling! 💖</h1>
       <p>This message is editable — click and make it yours!</p>
-      <div class="editable" contenteditable="true">
-  <p>Dear Siphiwe,</p>
-  <p>Happy Birthday, my love! 🎉</p>
-  <p>On this special day, I just want to say how much you mean to me. Your smile lights up my world, and your presence fills my life with joy, love, and purpose. 💖</p>
-  <p>Thank you for being so amazing — beautiful, strong, kind, and truly one of a kind. I hope today brings you as much happiness as you bring into my life every single day.</p>
-  <p>I love you more than words can ever express.</p>
-  <p>With all my heart,</p>
-  <p><strong>Jeffrey</strong></p>
-</div>
+      
+      <!-- Add the image here -->
+      <img src="siphiwe.jpg" alt="Photo of Siphiwe" />
 
+      <div class="editable" contenteditable="true">
+        <p>Dear Siphiwe,</p>
+        <p>Happy Birthday, my love! 🎉</p>
+        <p>On this special day, I just want to say how much you mean to me. Your smile lights up my world, and your presence fills my life with joy, love, and purpose. 💖</p>
+        <p>Thank you for being so amazing — beautiful, strong, kind, and truly one of a kind. I hope today brings you as much happiness as you bring into my life every single day.</p>
+        <p>I love you more than words can ever express.</p>
+        <p>With all my heart,</p>
+        <p><strong>Jeffrey</strong></p>
       </div>
     </div>
   </div>
