add 31st birthday

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <div class="container">
     <div class="card">
       <h1>🎂 Happy Birthday, Darling! 💖</h1>
-      <p>This message is editable — click and make it yours!</p>
+      <p>Happy 31st</p>
       
       <!-- Add the image here -->
       <img src="siphiwe.jpg" alt="Photo of Siphiwe" />
